--- a/references.bib
+++ b/references.bib
@@ -70,3 +70,14 @@
   journal={arXiv preprint arXiv:1906.04341},
   year={2019}
 }
+@book{draper1998applied,
+  title={Applied regression analysis},
+  author={Draper, NR},
+  year={1998},
+  publisher={McGraw-Hill. Inc} 
+}
+@article{hastie2009introduction,
+  title={An introduction to statistical learning},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  year={2009} 
+}
