--- a/references.bib
+++ b/references.bib
@@ -81,3 +81,9 @@
   author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
   year={2009} 
 }
+@book{molnar2020interpretable,
+  title={Interpretable machine learning},
+  author={Molnar, Christoph},
+  year={2020},
+  publisher={Lulu. com}
+}
